--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,28 +1,22 @@
 #访问根路径
-
 #应用名称
 spring.application.name=springboot-demo
-
 #访问端口号
 server.port=8080
-
 #编码格式
 server.tomcat.uri-encoding=utf-8
-
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.41.224.54:3306/mysql
+spring.datasource.url=jdbc:mysql://121.41.224.54:3306/life_thing
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
+spring.datasource.hikari.max-lifetime=500000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
-
 #session生命周期
 server.servlet.session.timeout=30m
- 
- 
- 
+mybatis.mapperLocations=classpath:mapper/*Mapper.xml
  
  
