--- a/vue-element-admin-i18n/package.json
+++ b/vue-element-admin-i18n/package.json
@@ -46,6 +46,8 @@
     "xlsx": "0.14.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/register": "^7.12.1",
     "@vue/cli-plugin-babel": "4.4.4",
     "@vue/cli-plugin-eslint": "4.4.4",
     "@vue/cli-plugin-unit-jest": "4.4.4",
