--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.datasource.url=jdbc:mysql://121.41.224.54:3306/life_thing
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.hikari.max-lifetime=500000
+spring.datasource.max-wait=1000000
+spring.datasource.hikari.max-lifetime=1000000
+spring.datasource.min-evictable-idle-time-millis=1800000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 #sessionÉúÃüÖÜÆÚ
