--- a/springboot/src/main/resources/bootstrap.yml
+++ b/springboot/src/main/resources/bootstrap.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8020
+  port: 8080
 
 spring:
   application:
-    name: szacrm-manager-customer
+    name: springboot-demo
 
   #使用环境
   profiles:
@@ -23,66 +23,7 @@ spring:
 spring:
   profiles: dev
 
-asms:
-  url: http://192.168.1.139:8080/openapi/asmscrm
+  web:
+    upload-path: /usr/local/szacrm/web/upload/
+    vue-path: /usr/local/szacrm/web/
 
-# 注册中心配置
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://upop:upop@192.168.1.225:1025/eureka/
-
----
-qXBao:
-  appkey: ada44bd0070711e6b8a865678b483fde
-
----
-asmsApi:
-  ip:
-  travel: /openapi/b2g/Cl
-  grzx: /openapi/b2g/Grzx
-  Cl: /openapi/b2g/Cl
----
-spring:
-  profiles: dev2test
-
-  asms:
-    url: http://192.168.1.139:8080/openapi/asmscrm
-
-# 注册中心配置
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://upop:upop@192.168.1.225:1025/eureka/
-
----
-spring:
-  profiles: test
-
-# 注册中心配置
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://upop:upop@10.13.131.100:1025/eureka/
-
----
-spring:
-  profiles: prod
-
-# 注册中心配置
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://upop:awIVZTBefS9CDphX@10.12.71.53:1025/eureka/,http://upop:awIVZTBefS9CDphX@10.12.71.82:1025/eureka/
-
-      mybatis:
-      mapper-locations: classpath:mapper/*_mapper.xml
-      type-aliases-package: com.util.model
