--- a/smallTools/manifest.json
+++ b/smallTools/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "smallTools",
+    "name" : "实用小工具",
     "appid" : "__UNI__F60B6D6",
     "description" : "",
     "versionName" : "1.0.0",
